--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "extract-text-webpack-plugin": "^2.1.0",
     "jquery": "^3.2.1",
     "node-sass": "^4.5.2",
+    "react-native": "^0.47.1",
+    "react-native-web": "0.0.119",
     "sass-loader": "^6.0.3",
     "slim-lang-loader": "0.0.7",
     "style-loader": "^0.16.1",
