--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "jquery": "^3.2.1"
   },
   "devDependencies": {
+    "css-loader": "^2.1.0",
+    "style-loader": "^0.23.1",
     "webpack": "^2.7.0",
     "webpack-dev-server": "^2.4.2"
   }
